fix: restruct files.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 	<title>Udacity's Cloud DevOps Engineer Nanodegree Program</title>
 </head>
 <body>
-	<p><b>Hello World!</b> This Stephan Studener's Capstone Project. </p>
+	<p><b>Hello World!</b> This is Stephan Studener's Capstone Project. </p>
 </body>
 </html>
